crates/fyn-requirements-txt/src/snapshots/uv_requirements_txt__test__parse-unix-hash.txt.snap
---
source: crates/fyn-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxtFileError {
    file: "<REQUIREMENTS_DIR>/hash.txt",
    error: Pep508 {
        source: Pep508Error {
            message: String(
                "Expected end of input or `;`, found `#`; comments must be preceded by a leading space",
            ),
            start: 10,
            len: 1,
            input: "./editable# comment",
        },
        start: 49,
        end: 68,
    },
}
